<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="245dp"
        android:layout_height="277dp"
        android:layout_marginStart="85dp"
        app:srcCompat="@drawable/thermometer_1"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/description_0"
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txt_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="45dp"
        android:ems="10"
        android:hint="@string/number_of_chirps_in_25_seconds"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:background="@color/colorPrimary"
        android:text="@string/calculate_temperature"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>